--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: postgres
     env_file: .env
     ports:
-      - 5439:5432
+      - 5436:5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 7s
@@ -17,7 +17,7 @@ services:
     build: .
     command: python manage.py migrate
     depends_on:
-      db_py_controller:
+      db_cnab_parser:
         condition: service_healthy
 
   web:
@@ -29,7 +29,7 @@ services:
     ports:
       - 8000:8000
     depends_on:
-      db_py_controller:
+      db_cnab_parser:
         condition: service_healthy
       migrations:
         condition: service_completed_successfully
